[package]
name = "http-body"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "vx.y.z" git tag.
version = "0.3.1"
authors = [
  "Carl Lerche <me@carllerche.com>",
  "Lucio Franco <luciofranco14@gmail.com>",
  "Sean McArthur <sean@seanmonstar.com>",
]
edition = "2018"
readme = "README.md"
documentation = "https://docs.rs/http-body/0.3.0/http-body"
repository = "https://github.com/hyperium/http-body"
license = "MIT"
description = """
Trait representing an asynchronous, streaming, HTTP request or response body.
"""
keywords = ["http"]
categories = ["web-programming"]

[dependencies]
bytes = "0.5"
http = "0.2"
